--- a/services/database/config.json
+++ b/services/database/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "lk19981123",
+    "password": "root",
     "database": "ki-competition",
     "host": "127.0.0.1",
     "dialect": "mysql"
