feat: 增加小程序首页样式

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "方小鱼",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"black",
+    "backgroundColor": "#fff"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
