--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,6 +9,11 @@
     "navigationBarTextStyle":"black",
     "backgroundColor": "#fff"
   },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
