--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -21,7 +21,7 @@
     "checkSiteMap": true,
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
-    "useMultiFrameRuntime": false,
+    "useMultiFrameRuntime": true,
     "useApiHook": true,
     "useApiHostProcess": true,
     "babelSetting": {
