--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/index/index",
     "pages/event-details/index",
-    "pages/user/index"
+    "pages/user/index",
+    "pages/map/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
