--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -28,6 +28,12 @@
       }
     ]
   },
+  "plugins": {
+    "routePlan": {
+      "version": "1.0.12",
+      "provider": "wx50b5593e81dd937a"
+    }
+  },
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
