feat: 小程序搜索页面

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,9 @@
     "pages/index/index",
     "pages/event-details/index",
     "pages/user/index",
-    "pages/map/index"
+    "pages/map/index",
+    "pages/search/index",
+    "pages/event-list/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
