--- a/miniprogram/project.private.config.json
+++ b/miniprogram/project.private.config.json
@@ -29,6 +29,12 @@
           "pathName": "pages/user/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/search/index",
+          "pathName": "pages/search/index",
+          "query": "",
+          "scene": null
         }
       ]
     }
