--- a/miniprogram/project.private.config.json
+++ b/miniprogram/project.private.config.json
@@ -35,6 +35,11 @@
           "pathName": "pages/search/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/team/index",
+          "pathName": "pages/team/index",
+          "scene": null
         }
       ]
     }
